-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.9.0
-
None
-
-
f4c2eeac6 (dev), 2a4b3f730 (6.9)
Since this morning when I uninstalled 6.8.3 and installed 6.9.0 (alongside from yesterday new Qt Creator version), the Qt does not build.
It configures fine, but when I try to build, the first automatic command Qt does is:
C:/Qt/Tools/Ninja/ninja.exe -v all
which then firs tthink copies (i think it copies, or what it does Im not sure) all soruce files to build folder.
This at some point (always at same task #), Qt dies... sometimes it freezes so I have to force kill, sometimes it gives ninja error, subcommand failed, sometimes it just disappear as it died itself...
this happen for any build... MinGW, MSVC, Android...
Compile output give no info, only that Build failed, and Issues gives me:
ninja: build stopped: subcommand failed.
several times tried to reinstall ninja, all Qt, nothing helps...
if you have no suggestions, I will try to install back 6.8.3
- relates to
-
QTBUG-136998 qmllint crashes when checking required properties
-
- Closed
-
-
QTBUG-136583 qmlls eats all available memory
-
- Closed
-
-
QTCREATORBUG-32700 QML snippets take too long to auto-complete and sometimes don't at all
-
- Closed
-
| For Gerrit Dashboard: QTBUG-135457 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 637917,21 | Compiler: Deduplicate conversion origins based on register's content | dev | qt/qtdeclarative | Status: MERGED | +2 | +1 |
| 640268,6 | Compiler: Move QQmlJSRegisterContentPrivate to the header file | dev | qt/qtdeclarative | Status: ABANDONED | 0 | 0 |
| 643131,2 | Compiler: Deduplicate conversion origins based on register's content | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |