tests/auto/qml/qmlcppcodegen/data/DeduplicateConversionOrigins.qml
@@ -1,0 +1,9 @@
+import QtQml
+
+QtObject {
+    function yep() {
+        try { }
+        catch (e) { replace(/()/, ""); }
+        for (let i = 0; i < 1; ++i) { }
+    }
+}
